--- a/CarService/packages.config
+++ b/CarService/packages.config
@@ -9,7 +9,8 @@
   <package id="Microsoft.AspNetCore.Cryptography.Internal" version="8.0.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="8.0.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
-  <package id="MySql.Data" version="8.3.0" targetFramework="net472" />
+  <package id="MySql.Data" version="8.3.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="ReaLTaiizor" version="3.8.0.5" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net472" />
