--- a/CarService/CarService.csproj
+++ b/CarService/CarService.csproj
@@ -173,6 +173,18 @@
     <Compile Include="MySqlCreate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ServiceCardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Services\ServiceCardForm.Designer.cs">
+      <DependentUpon>ServiceCardForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Services\ServicesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Services\ServicesForm.Designer.cs">
+      <DependentUpon>ServicesForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Cars\CarsCardForm.resx">
       <DependentUpon>CarsCardForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -210,6 +222,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Services\ServiceCardForm.resx">
+      <DependentUpon>ServiceCardForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Services\ServicesForm.resx">
+      <DependentUpon>ServicesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
