--- a/CarService/CarService.csproj
+++ b/CarService/CarService.csproj
@@ -179,6 +179,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account\AccountForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Account\AccountForm.Designer.cs">
+      <DependentUpon>AccountForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cars\CarsCardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -269,6 +275,9 @@
     <Compile Include="Services\ServicesForm.Designer.cs">
       <DependentUpon>ServicesForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Account\AccountForm.resx">
+      <DependentUpon>AccountForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Cars\CarsCardForm.resx">
       <DependentUpon>CarsCardForm.cs</DependentUpon>
     </EmbeddedResource>
