--- a/CarService/CarService.csproj
+++ b/CarService/CarService.csproj
@@ -263,6 +263,12 @@
     <Compile Include="MySqlCreate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\ReportsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reports\ReportsForm.Designer.cs">
+      <DependentUpon>ReportsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Services\ServiceCardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -324,6 +330,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reports\ReportsForm.resx">
+      <DependentUpon>ReportsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Services\ServiceCardForm.resx">
       <DependentUpon>ServiceCardForm.cs</DependentUpon>
     </EmbeddedResource>
